<resources>
    <string name="app_name">Login-form</string>
    <string name="person_illustration">person_illustration</string>
    <string name="main_title">Discover Your Dream Job Here</string>
    <string name="main_sub_title">Explore all the existing job roles based on your interest and study major</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_here">Login here</string>
    <string name="welcome_back">Welcom back you\'ve been missed</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget your password?</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">create new account</string>
    <string name="continue_with">Or continue with</string>
    <string name="ic_google">ic_google</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_welcome">Create an account so you can explore all the existing jobs</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account">Already have an account?</string>
</resources>